gif = index.html

--- a/bigarticle.html
+++ b/bigarticle.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- ============= Navbar ================ -->
-    <nav class="navbar navbar-custom">
+    <nav class="navbar navbar-blue">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="#"> <span id="siteName"> SAMFUNNSVITEREN </span> </a>
+            <a class="navbar-brand " href="index.html"> <span id="siteName"> SAMFUNNSVITEREN </span> </a>
             <a class="navbar-brand " href="#"> <span id="releaseNum"> 1 - 2017 </span> </a>
             </div>
 
@@ -93,7 +93,14 @@
     <!-- ============= Article 1 section ================ -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-6"></div>
+            <div class="col-lg-6 addon">
+                <!--<div class="col-lg-5 addon-img">
+                    <img src="img/03.jpg">
+                </div>
+                <div class="col-lg-4 addon-text">
+                    <p id="addon-quote">Bildetekst sed ac mollis lea, et blandit nunc. Duis sed lacus sit amet eros placerat finibus gravida vel ipsum.</p>
+                </div>-->
+            </div>
             <div class="col-lg-6">
                 <p id="txt2">Sed sit amet nibh a ante efficitur aliquet id sit amet erat. Donec arcu purus, lacinia ut tristique sit amet, tempus ac neque. Duis magna dui, posuere quis commodo ac, ornare ut neque. Aliquam magna nisi, cursus vel quam id, tincidunt faucibus arcu. Vestibulum sed ante viverra, venenatis ex eget, rhoncus urna.</p>
                 <p id="txt1">Nam eu dapibus lorem. </p>
@@ -108,12 +115,12 @@
     <!-- ============= Article 2 section ================ -->
     <div class="container modul-1">
         <div class="row">
-            <div class="col-sm-6 quote-text">
+            <div class="col-sm-12 col-md-5 quote-text">
                 <h5 id="quote">– Fagforeninger må ta inn over seg at i fremtiden vil arbeidstakere i mindre grad være fast ansatte. Utviklingen fremtvinges både gjennom formidlings-økonomien, men også av at arbeidsoppgaver blir mer spesialiserte, og markedet vil oppleve flere svingninger som følge av raskere skift i både forbrukerne og arbeidstakernes preferanser.</h5>
                 <p id="quote-person">Roger Schjerva</p>
             </div>
             
-            <div class="col-sm-6 quote-img">
+            <div class="col-sm-12 col-md-6 col-md-offset-1 quote-img">
                 <img src="img/02.jpg" class="img-responsive">
 
                 <div class="col-xs-12 col-sm-6 col-sm-push-6">
@@ -132,7 +139,6 @@
 
         </div>
     </div>
-
     
     <!-- ============= Full width Image ================ -->
     <div class="container">
