--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- ============= Navbar ================ -->
-    <nav class="navbar navbar-blue">
+    <nav class="navbar navbar-custom">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -55,16 +55,16 @@
     </nav>
 
     <!-- ============= Issue Front ================ -->
-    <div class="fullw-blue">
+    <div class="fullw-custom">
 
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 issue-front">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6  issue-img">
-                            <div style="background-image: url('img/04.jpg');" class="res-img"></div>
+                        <div class="col-sm-12 col-md-12 col-lg-6 issue-img">
+                            <div style="background-image: url('img/animation-03.gif');" class="res-img"></div>
                         </div>
-                        <div class="col-sm-12 col-md-6 issue-text">
+                        <div class="col-sm-12 col-md-12 col-lg-6 issue-text">
                             <p id="topCategory"> Tema - Det nye arbeidslivet - 1/4 </p>
                             <h2 id="title"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
@@ -87,7 +87,7 @@
                             <p id="category"> Dybdeartikkel </p>
                             <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
-                            <button type="button" class="sfButton2">LES ARTIKKELEN</button>
+                            <a href="bigarticle.html"> <button type="button" class="sfButton2">LES ARTIKKELEN</button> </a>
                         </div>
                         <div class="col-lg-1"></div>
 
