--- a/bigarticle.html
+++ b/bigarticle.html
@@ -60,7 +60,11 @@
     <!-- ============= Long Article Top ================ -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-5 art-main-img">
+            <div class="col-lg-5 art-main-img go-back">
+                <ul>
+                    <li> <img src="img/nav/arrow-left-wht.png"> </li>
+                    <li> <p id="category">Tilbake til magasinet</p> </li>
+                </ul>
                 <div class="art-img-wrapper"></div>
             </div>  
 
@@ -226,7 +230,7 @@
     </div>
 
     <!-- ============= Related Articles ================ -->
-    <div class="fullw-grey">
+    <div class="fullw-grey-2">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -403,6 +407,4 @@
 </body>
 
 </html>
-
-
 
