--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-6 issue-img">
                             <div style="background-image: url('img/animation-03.gif');" class="res-img"></div>
                         </div>
-                        <div class="col-sm-12 col-md-12 col-lg-6 issue-text">
+                        <div class="col-sm-12 col-md-12 col-lg-5 issue-text">
                             <p id="topCategory"> Tema - Det nye arbeidslivet - 1/4 </p>
                             <h2 id="title"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
@@ -326,7 +326,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-6 high-article">
                     <img src="img/06.jpg" class="img-responsive">
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 high-article-text">
+                <div class="col-sm-12 col-md-12 col-lg-5 high-article-text">
                     <p id="category"> Dybde </p>
                     <h2 id="title"> FREMHEVET ARTIKKEL</h2>
                     <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
@@ -578,7 +578,7 @@
                     <div class="issue issue1">
 
                         <div class="hovedArtText issue-text">
-                            <p id="category"> Dybdeartikkel </p>
+                            <p id="topCategory"> Tema - Det nye arbeidslivet - 1/3 </p>
                             <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
                             <button type="button" class="sfButton">LES MER</button>
@@ -589,7 +589,7 @@
                     <div class="issue issue2">
 
                         <div class="hovedArtText issue-text">
-                            <p id="category"> Dybdeartikkel </p>
+                            <p id="topCategory"> Tema - Det nye arbeidslivet - 2/3 </p>
                             <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
                             <button type="button" class="sfButton">LES MER</button>
@@ -600,7 +600,7 @@
                     <div class="issue issue3">
 
                         <div class="hovedArtText issue-text">
-                            <p id="category"> Dybdeartikkel </p>
+                            <p id="topCategory"> Tema - Det nye arbeidslivet - 3/3 </p>
                             <h2 id="title"> TITTEL PÅ UTGAVENS HOVEDARTIKKEL </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer </p>
                             <button type="button" class="sfButton">LES MER</button>
@@ -657,12 +657,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
 </body>
 <!-- Latest compiled and minified JavaScript -->
