--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <!-- Main Custom Stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/custom2.css" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/768px.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/media-queries.css" />
 
 </head>
 
@@ -66,7 +65,7 @@
                         </div>
                         <div class="col-sm-12 col-md-12 col-lg-5 issue-text">
                             <p id="topCategory"> Tema - Det nye arbeidslivet - 1/4 </p>
-                            <h2 id="title"> SAMFUNNSENDRINGER OG ARBEIDSLIV </h2>
+                            <h2 id="title"> SAMFUNN OG ARBEIDSLIV </h2>
                             <p id="content"> Landet vårt opplever store Samfunnsendringer på grunn av blant annet migrasjon, radikalisering, en aldrende befolkning og en økende grad urbanisering. Hvordan påvirkes arbeidslivet av slike samfunnsendringer</p>
                             <button type="button" class="sfButton">LES MER</button>
                         </div>
@@ -571,6 +570,16 @@
 
     <!-- ============= Footer ================ -->
     <div class="fullw-footer"> 
+
+        <!--<div class="carousel">
+            <div class="go-left">
+                <img src="img/nav/arrow-left-wht.png">
+            </div>
+            <div class="go-right">
+                <img src="img/nav/arrow.png">
+            </div>
+        </div>-->
+
         <div class="container">
             <div class="row">
 
