--- a/medlem.html
+++ b/medlem.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 
+<!-- ============= Head ================ -->
 <head>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +19,7 @@
     <!-- Main Custom Stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/custom2.css" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/768px.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/media-queries.css" />
 
 </head>
 
@@ -142,5 +142,7 @@
     </div>
 
 </body>
+<!-- Latest compiled and minified JavaScript -->
+<script src="javascripts/bootstrap.min.js"></script>
 
 </html>
