--- a/bigarticle.html
+++ b/bigarticle.html
@@ -130,7 +130,7 @@
                 <img src="img/02.jpg" class="img-responsive">
             
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-sm-push-6">
+                    <div class="col-xs-12 col-sm-6 col-sm-push-6 col-lg-4 col-lg-push-8">
                         <p id="img-text-right">Bildetekst sed ac mollis lea, et blandit nunc. Duis sed lacus sit amet eros placerat finibus gravida vel ipsum.</p>
                     </div>
 
